; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_extension_utils.c_extension_is_transitioning.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_extension_utils.c_extension_is_transitioning.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@creating_extension = common dso_local global i64 0, align 8
@EXTENSION_NAME = common dso_local global i32 0, align 4
@CurrentExtensionObject = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @extension_is_transitioning to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @extension_is_transitioning() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @creating_extension, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %10

4:                                                ; preds = %0
  %5 = load i32, i32* @EXTENSION_NAME, align 4
  %6 = call i64 @get_extension_oid(i32 %5, i32 1)
  %7 = load i64, i64* @CurrentExtensionObject, align 8
  %8 = icmp eq i64 %6, %7
  %9 = zext i1 %8 to i32
  store i32 %9, i32* %1, align 4
  br label %11

10:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %10, %4
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i64 @get_extension_oid(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
